--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,18 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "CI=true react-scripts test --env=jsdom --verbose",
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix ./src"
   },
   "proxy": "http://localhost:3003",
   "devDependencies": {
+    "babel-eslint": "^9.0.0",
+    "deep-freeze": "0.0.1",
     "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0"
+    "enzyme-adapter-react-16": "^1.7.0",
+    "eslint": "^5.6.0",
+    "eslint-plugin-jest": "^22.0.0"
   },
   "setupFiles": [
     "<rootDir>/src/setupTests.js"
