--- a/.gitignore
+++ b/.gitignore
@@ -60,19 +60,5 @@ typings/
 # next.js build output
 .next
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# rest directory
+requests
