--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "NODE_ENV=production node index.js",
     "watch": "NODE_ENV=development nodemon index.js",
     "test": "NODE_ENV=test jest --verbose",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "heroku-postbuild": "cd frontend/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
@@ -29,6 +30,10 @@
     "nodemon": "^1.18.4",
     "supertest": "^3.3.0"
   },
+  "cacheDirectories": [
+    "node_modules",
+    "frontend/node_modules"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Yekku/full-stack-osa-4.git"
