--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "mongoose": "^5.3.6"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.7.0",
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.6.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
@@ -40,6 +40,10 @@
   },
   "homepage": "https://github.com/Yekku/full-stack-osa-4#readme",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/client/",
+      "/node_modules/"
+    ]
   }
 }
