--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
+    "react-sky": "^1.0.2",
     "react-test-render": "^1.1.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.5",
