--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.4",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.12"
+    "mongoose": "^5.10.3"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^23.6.0",
     "nodemon": "^1.19.1",
